feat: GetByID for gifts
